# angzarr-examples-rust

./: .gitignore  .gitmodules  .mcp.json  Cargo.toml  Containerfile  Makefile  README.md  TASKS.md  buf.gen.yaml  build.json  install-docker.sh  justfile  justfile.container  skaffold.yaml  spec-draft.md  spec-framework-analysis.md
.github/workflows/: acceptance-callable.yml  ci.yml
.scm/context/: 08af581bda35bf5d.md
data/: hand.db  player.db  table.db
deploy/k8s/base/: config.yaml  kustomization.yaml  namespace.yaml  poker-apps.yaml  postgres.yaml  rabbitmq.yaml
deploy/k8s/helm/: values-ci.yaml  values.yaml
deploy/k8s/overlays/ci/: gateway-imagepullpolicy-patch.yaml  imagepullpolicy-patch.yaml  imagepullsecrets-patch.yaml  kustomization.yaml
deploy/kind/: cluster.yaml
hand-flow-oo/: Cargo.toml
hand-flow-oo/src/: main.rs
hand-flow/src/: main.rs
hand/agg/: Cargo.toml
hand/agg/src/: game_rules.rs  handler.rs  state.rs
hand/agg/src/handlers/: award_pot.rs  deal_cards.rs  deal_community.rs  player_action.rs  post_blind.rs  request_draw.rs  reveal_cards.rs
hand/saga-player/: Cargo.toml
hand/saga-player/src/: main.rs
hand/saga-table/: Cargo.toml
hand/saga-table/src/: main.rs
player/agg/: Cargo.toml
player/agg-oo/: Cargo.toml
player/agg-oo/src/: main.rs
player/agg/src/: handler.rs  state.rs
player/agg/src/handlers/: buy_in.rs  deposit.rs  mod.rs  rebuy.rs  register.rs  registration.rs  rejected.rs  release.rs  reserve.rs  sit_in.rs  sit_out.rs  withdraw.rs
player/upc/src/: main.rs
pmg-buy-in/: Cargo.toml
pmg-buy-in/src/: handler.rs  lib.rs  main.rs  state.rs  table_state.rs
pmg-hand-flow/: Cargo.toml
pmg-hand-flow-oo/: Cargo.toml
pmg-hand-flow-oo/src/: main.rs
pmg-hand-flow/src/: main.rs
pmg-rebuy/: Cargo.toml
pmg-rebuy/src/: handler.rs  lib.rs  main.rs  state.rs
pmg-registration/: Cargo.toml
pmg-registration/src/: handler.rs  lib.rs  main.rs  state.rs
prj-cloudevents/src/: main.rs
prj-output/: Cargo.toml
prj-output-oo/: Cargo.toml
prj-output-oo/src/: main.rs
prj-output/src/: main.rs  output_projector_doc.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
scripts/: setup-local-env.sh  sync-features.sh
table/agg/: Cargo.toml
table/agg-oo/: Cargo.toml
table/agg-oo/src/: main.rs
table/agg/src/: handler.rs  state.rs
table/agg/src/handlers/: add_rebuy_chips.rs  create.rs  end_hand.rs  join.rs  leave.rs  mod.rs  seat_player.rs  start_hand.rs
table/saga-hand/: Cargo.toml
table/saga-hand-oo/: Cargo.toml
table/saga-hand-oo/src/: main.rs
table/saga-hand/src/: main.rs  splitter_example.rs
table/saga-player/: Cargo.toml
table/saga-player/src/: main.rs
tests/: Cargo.toml  TEST_ARCHITECTURE.md  build.rs
tests/src/: lib.rs
tests/tests/: acceptance.rs  hand.rs  orchestration.rs  player.rs  table.rs
tournament/agg/: Cargo.toml
tournament/agg/src/: handler.rs  lib.rs  main.rs  state.rs
tournament/agg/src/handlers/: create.rs  enroll.rs  lifecycle.rs  mod.rs  rebuy.rs  registration.rs
