[workspace]
resolver = "2"
members = [
    "proto",
    "player/agg",
    "player/upc",
    "table/agg",
    "table/saga-hand",
    "table/saga-player",
    "hand/agg",
    "hand/saga-table",
    "hand/saga-player",
    "prj-output",
    "pmg-hand-flow",
    "tests",
]

[workspace.dependencies]
angzarr-client = { git = "https://github.com/angzarr-io/angzarr-client-rust", tag = "v0.2.6" }
examples-proto = { path = "proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"

# Container build profile - fast compilation, no incremental
[profile.container-dev]
inherits = "dev"
incremental = false

# Container release profile - optimized for size
[profile.production]
inherits = "release"
lto = true
opt-level = "z"
strip = true
