[workspace]
resolver = "2"
members = [
    "proto",
    "player/agg",
    "player/upc",
    "table/agg",
    "table/agg-oo",
    "table/saga-hand",
    "table/saga-player",
    "hand/agg",
    "hand/saga-table",
    "hand/saga-player",
    "hand-flow-oo",
    "tournament/agg",
    "prj-output",
    "prj-output-oo",
    "pmg-hand-flow",
    "pmg-buy-in",
    "pmg-registration",
    "pmg-rebuy",
    "tests",
]

[workspace.dependencies]
angzarr-client = { path = "../../client-rust/main" }
examples-proto = { path = "proto" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["tls-ring", "transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# Container build profile - fast compilation, no incremental
[profile.container-dev]
inherits = "dev"
incremental = false

# Container release profile - optimized for size
[profile.production]
inherits = "release"
lto = true
opt-level = "z"
strip = true
