[package]
name = "prj-output-oo"
version = "0.1.0"
edition = "2021"

[dependencies]
examples-proto.workspace = true
angzarr-client.workspace = true
angzarr-macros.workspace = true
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
chrono.workspace = true
