[package]
name = "poker-tests"
version = "0.1.0"
edition = "2021"

[lib]
name = "poker_tests"
path = "src/lib.rs"

[features]
default = []
acceptance-test = ["tonic", "uuid"]

[dependencies]
examples-proto.workspace = true
angzarr-client.workspace = true
agg-player = { path = "../player/agg" }
agg-table = { path = "../table/agg" }
agg-hand = { path = "../hand/agg" }
agg-tournament = { path = "../tournament/agg" }
pmg-buy-in = { path = "../pmg-buy-in" }
pmg-registration = { path = "../pmg-registration" }
pmg-rebuy = { path = "../pmg-rebuy" }
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
prost = { workspace = true }
prost-types = { workspace = true }
hex = "0.4"
sha2 = "0.10"
regex = "1"
tonic = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[[test]]
name = "player"
harness = false

[[test]]
name = "table"
harness = false

[[test]]
name = "hand"
harness = false

[[test]]
name = "orchestration"
harness = false

[[test]]
name = "acceptance"
required-features = ["acceptance-test"]
