[package]
name = "saga-table-hand-oo"
version = "0.1.0"
edition = "2021"

[dependencies]
examples-proto.workspace = true
angzarr-client.workspace = true
tokio.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
